Tab Backend logic added to about me section

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -101,6 +101,11 @@ ul.navbar-nav {
   top: -10px;
 }
 
+.articles {
+  position: relative;
+  top: 100px;
+}
+
 .navbar-brand > img{
   position: relative;
   left: 60px;
