--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,5 +1,5 @@
 
-<div class="row">
+<div class="row articles">
 
     <div ng-repeat="product in products">
       <div class="col-md-4" id="article">
